--- a/yx-platform/jenkinsFile
+++ b/yx-platform/jenkinsFile
@@ -51,6 +51,8 @@ pipeline {
 		stage('ansible deploy service') {
             steps {
 				dir (path:"../yxmall_deploy/yx-platform/playbooks"){
+				     sh 'source /root/.py3-a2.5-env/bin/activate'
+				     sh 'source /root/.py3-a2.5-env/ansible/hacking/env-setup -q'
 					 sh 'ansible --version'
 				     sh 'ansible-playbook -i   inventory/$deploy_env ./deploy.yml  -e fileName=$fileName'
 				}
