--- a/yx-platform/jenkinsFile
+++ b/yx-platform/jenkinsFile
@@ -50,11 +50,9 @@ pipeline {
 
 		stage('ansible deploy service') {
             steps {
-                sh 'source /root/.py3-a2.5-env/bin/activate'
-                sh 'source /root/.py3-a2.5-env/ansible/hacking/env-setup -q'
 				dir (path:"../yxmall_deploy/yx-platform/playbooks"){
 					 sh 'ansible --version'
-				     sh 'ansible-playbook -i inventory/$deploy_env ./deploy.yml  -e fileName=$fileName'
+				     sh 'ansible-playbook -i inventory/$dev_env ./deploy.yml  -e fileName=$fileName'
 				}
 			  }
         }
