--- a/yx-platform/playbooks/deploy.yml
+++ b/yx-platform/playbooks/deploy.yml
@@ -2,7 +2,7 @@
   gather_facts: true
   remote_user: root
   vars:
-      pwd: /root/workspace
+      pwd: /home
       fileName: demo-0.0.1-SNAPSHOT.jar
   roles:
     - yx-platform
