--- a/yx-platform/jenkinsFile
+++ b/yx-platform/jenkinsFile
@@ -18,7 +18,7 @@ pipeline {
 			name: 'dev_env'
 		)
 		string (name: 'branch', defaultValue: 'master', description: '需要部署的分支名称')
-		string (name: 'fileName', defaultValue: 'demo-0.0.1-SNAPSHOT.jar', description: '部署jar名称')
+		string (name: 'fileName', defaultValue: 'yx-platform-0.0.1-SNAPSHOT.jar', description: '部署jar名称')
 	}
 
 
@@ -27,7 +27,7 @@ pipeline {
             steps {
 				sh 'git config --global http.sslVerify false'
 				dir ("${env.WORKSPACE}"){
-					git branch: '$branch', credentialsId: '69d456d5-9dc9-475a-b5e5-325acd530197', url: 'https://github.com/wangyajungithub/demo.git'
+					git branch: '$branch', credentialsId: '69d456d5-9dc9-475a-b5e5-325acd530197', url: 'https://github.com/YxMall/yx-platform.git'
 				}
             }
         }
