--- a/yx-platform/playbooks/deploy.yml
+++ b/yx-platform/playbooks/deploy.yml
@@ -3,6 +3,6 @@
   remote_user: root
   vars:
       pwd: /home
-      fileName: demo-0.0.1-SNAPSHOT.jar
+      fileName: yx-platform-0.0.1-SNAPSHOT.jar
   roles:
     - yx-platform
