--- a/yx-platform/jenkinsFile
+++ b/yx-platform/jenkinsFile
@@ -52,7 +52,7 @@ pipeline {
             steps {
 				dir (path:"../yxmall_deploy/yx-platform/playbooks"){
 					 sh 'ansible --version'
-
+				     sh 'ansible-playbook -i inventory/$dev_env ./deploy.yml'
 				}
 			  }
         }
