新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -28,12 +28,11 @@ pipeline {
 
 		stage('build deploy code') {
             steps {
-				dir ("${env.WORKSPACE}"){
-					sh 'node -v'
-					sh 'npm -v'
+
+					sh 'node -V'
+					sh 'npm -V'
 					sh 'npm i'
 					sh 'npm run build'
-				}
             }
         }
 
