新建前端脚本配置

--- a/yx-platform_front/playbooks/deploy.yml
+++ b/yx-platform_front/playbooks/deploy.yml
@@ -2,6 +2,6 @@
   gather_facts: true
   remote_user: root
   vars:
-      pwd: /root/yx-platform_front
+      pwd: /root/.jenkins/workspace/yx-platform_front
   roles:
     - yx-platform_front
