--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -29,6 +29,8 @@ pipeline {
 		stage('build deploy code') {
             steps {
 				dir ("${env.WORKSPACE}"){
+				    sh 'cd /root/yx-platform_front'
+				    sh 'git clone https://github.com/YxMall/yx-platform_front.git'
 					sh 'node -V'
 					sh 'npm -V'
 					sh 'npm i'
