新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -48,6 +48,13 @@ pipeline {
             }
         }
 
-
+		stage('ansible deploy service') {
+            steps {
+				dir (path:"../yxmall_deploy/yx-platform_front/playbooks"){
+					 sh 'ansible --version'
+				     sh 'ansible-playbook -i inventory/$dev_env ./deploy.yml'
+				}
+			  }
+        }
     }
 }
