新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -30,11 +30,13 @@ pipeline {
             steps {
 				dir ("${env.WORKSPACE}"){
 				    sh 'cd /root/yx-platform_front'
+				    dir(../yx-platform_front)｛
 				    sh 'git clone https://github.com/YxMall/yx-platform_front.git'
 					sh 'node -V'
 					sh 'npm -V'
 					sh 'npm i'
 					sh 'npm run build'
+					｝
 				}
             }
         }
