新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -29,7 +29,7 @@ pipeline {
 		stage('build deploy code') {
             steps {
 				    sh 'cd /root/yx-platform_front'
-				    dir(../yx-platform_front)｛
+				    dir(/root/yx-platform_front)｛
 				    sh 'git clone https://github.com/YxMall/yx-platform_front.git'
 					sh 'node -V'
 					sh 'npm -V'
