新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -28,6 +28,7 @@ pipeline {
 
 		stage('build deploy code') {
             steps {
+                    sh 'git config --global http.sslVerify false'
 				    sh 'cd /root/yx-platform_front'
 				    dir(/root/yx-platform_front)｛
 				    sh 'git clone https://github.com/YxMall/yx-platform_front.git'
