--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -28,15 +28,13 @@ pipeline {
 
 		stage('build deploy code') {
             steps {
-                sh 'git config --global http.sslVerify false'
-				sh 'cd /root/yx-platform_front'
-				dir(/root/yx-platform_front)｛
-				sh 'git clone https://github.com/YxMall/yx-platform_front.git'
-			    sh 'node -V'
-				sh 'npm -V'
-				sh 'npm i'
-				sh 'npm run build'
-					｝
+				dir ("${env.WORKSPACE}"){
+				    sh 'cd /root/yx-platform_front'
+				    sh 'git clone https://github.com/YxMall/yx-platform_front.git'
+					sh 'node -V'
+					sh 'npm -V'
+					sh 'npm i'
+					sh 'npm run build'
 				}
             }
         }
