--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -28,7 +28,7 @@ pipeline {
 
 		stage('build deploy code') {
             steps {
-				dir ("${env.WORKSPACE}"){
+				dir (path:"../yxmall_deploy/yx-platform_front/playbooks"){
 					sh 'node -V'
 					sh 'npm -V'
 					sh 'npm i'
