--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -48,7 +48,7 @@ pipeline {
 
 		stage('ansible deploy service') {
             steps {
-				dir (path:"../yxmall_deploy/yx-platform_front/playbooks"){
+				dir (path:"../yxmall_deploy/${JOB_NAME}/playbooks"){
 					 sh 'ansible --version'
 				     sh 'ansible-playbook -i inventory/$dev_env ./deploy.yml'
 				}
