新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -32,7 +32,7 @@ pipeline {
 					sh 'node -v'
 					sh 'npm -v'
 					sh 'npm i'
-					sh 'npm run build'
+					sh 'cnpm run build'
 				}
             }
         }
