新建前端脚本配置

--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -31,7 +31,7 @@ pipeline {
 				dir ("${env.WORKSPACE}"){
 					sh 'node -v'
 					sh 'npm -v'
-					sh 'npm i'
+					sh 'npm install'
 					sh 'npm run build'
 				}
             }
