--- a/yx-platform_front/jenkinsFile
+++ b/yx-platform_front/jenkinsFile
@@ -31,6 +31,7 @@ pipeline {
 				dir ("${env.WORKSPACE}"){
 					sh 'node -v'
 					sh 'npm -v'
+					sh 'npm i'
 					sh 'npm run build'
 				}
             }
