--- a/yx-platform_front/playbooks/roles/yx-platform_front/tasks/main.yml
+++ b/yx-platform_front/playbooks/roles/yx-platform_front/tasks/main.yml
@@ -1,3 +1,3 @@
 - name: Copy html to remote
-  copy: 'remote_src=no src={{ pwd }}/dist/  dest=/usr/share/ mode=0755'
+  copy: 'remote_src=no src={{ pwd }}/dist/  dest=/usr/share/nginx/html/ mode=0755'
 
